First commit for fakebook app frontend

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,30 @@
-/* You can add global styles to this file, and also import other style files */
+@import "variables";
+@import "../node_modules/bootstrap/scss/bootstrap";
+@import "~bootstrap-icons/font/bootstrap-icons.css";
+@import "assets/scss/modules/_fonts.scss";
+@import "ngx-toastr/toastr";
+
+// primary font
+$primary_font: "Poppins";
+
+// font-weight
+$thin: 100;
+$light: 300;
+$regular: normal;
+$bold: bold;
+$black: 900;
+
+// Font size
+$font-xs: 12px;
+$font-sm: 14px;
+$primary-fs: 16px;
+$font-md: 18px;
+$font-lg: 20px;
+
+body {
+  font-family: $primary_font !important;
+  font-size: $primary-fs !important;
+  font-weight: $regular !important;
+  background-color: #28273b !important;
+  color: #adb5bd !important;
+}
